--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
